# httpie-firebase-auth

./: .gitignore  Pipfile  README.md  firebase_auth.py  httpie_firebase_auth.py  pyproject.toml  setup.py
